--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a{
 
 :root{
     --blue: #0084FD;
-    --lightblue: #85ddff;
+    --lightblue: #B5DDFF;
     --lilla: #9792E4;
     --dark: #333333;
 
@@ -34,7 +34,11 @@ a{
 }
 
 .button--white{
-
+    color: black;
+    line-height: 30px;
+    background-color: white;
+    text-align: center;
+    border-radius: 20px;
 }
 
 .container{
@@ -87,17 +91,41 @@ a{
     }
 }
 
+@media only screen and (max-width:911px){
+    .main-header{
+        padding: 0 20px;
+    }
+
+    .main-header img{
+        padding-top: 10px;
+    }
+}
+
+@media only screen and (max-width:575px){
+    .main-header{
+        padding: 0 20px;
+    }
+
+    .main-header img{
+        padding-top: 10px;
+    }
+}
+
 /*HERO*/
 
 .card{
-    background-color:#85ddff;
-    border: 2px solid;
+    background-color:var(--lightblue);
     border-radius: 20px;
     min-height: 342px;
+    height: 100%;         
+}
+
+.hero{
+    margin-top: 50px;
+    margin-bottom: 100px;
 }
 
 .hero .row{
-    margin-top: 50px;
     gap: 24px;
 }
 
@@ -113,12 +141,55 @@ a{
     display: flex;
 }
 
+.col-2 h3{
+    color: var(--blue);
+}
+
+.button--blue{
+    color: white;
+    width: 232px;
+    line-height: 40px;
+    background-color: var(--blue);
+    text-align: center;
+    border-radius: 20px;
+}
+
+.apple{
+    padding-right: 10px;
+}
+
+.col-2 p{
+    line-height: 28px;
+    font-size: 14px;
+    color: #212121;
+}
+
+.phone{
+    display: flex;
+}
+
 .col-3>.card{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     text-align: center;
+}
+
+.hero-icon{
+    font-size: 80px;
+    color: var(--blue);
+    padding: 25px 0;
+}
+
+.col-3 h3{
+    padding-bottom: 20px;
+    color: var(--blue);
+}
+.col-3 p{
+    padding: 0 15px;
+    line-height: 28px;
+    font-size: 14px;
+    color: #212121;
 }
 
 .card-description{
@@ -128,8 +199,167 @@ a{
     gap: 40px;
 }
 
+
+@media only screen and (max-width:911px){
+    .col-2>.card{
+        flex-basis: 100%;
+        flex-wrap: wrap;
+    }
+
+    .button--blue{
+        margin-bottom: 40px;
+    }
+
+    .hero{
+        padding: 0 40px;
+    }
+}
+
 @media only screen and (max-width:575px){
     .hero [class^="col-"]{
         flex-basis: 100%;
+    }
+
+    .col-2>.card{
+        flex-basis: 100%;
+        flex-wrap: wrap;
+    }
+
+    .button--blue{
+        margin-bottom: 40px;
+    }
+
+    .hero{
+        padding: 0 40px;
+    }
+}
+
+/*PLANNING*/
+
+.container--small{
+    max-width: 880px;
+    margin: 0 auto;
+}
+
+.planning .row{
+    flex-wrap: nowrap;
+    align-items: flex-end;
+    gap: 80px;
+}
+
+.col-50{
+    flex-basis: 50%;
+    padding-bottom: 65px;
+}
+
+.planning{
+    background-color: var(--lilla);
+    display: flex;
+    align-items: flex-end;
+}
+
+.pla1{
+    max-width: 400px;
+    padding-top: 130px;
+}
+
+.pla2{
+    max-width: 240px;
+}
+
+
+.card--app{
+    background-color: white;
+    border-radius: 30px;
+    padding: 30px 40px;
+    text-align: center;
+}
+
+
+.col-50.strategic{
+    color: white;
+}
+
+.strategic h1{
+    padding-bottom: 65px;
+    padding-top: 130px;
+    font-size: 30px;
+}
+
+.strategic p{
+    line-height: 30px;
+}
+
+.card--app h3{
+    padding-bottom: 30px;
+    padding-top: 20px;
+}
+
+.card--app p{
+    line-height: 30px;
+    font-style: oblique;
+}
+
+.arrow{
+    background-color: var(--lilla);
+    border-radius: 999px;
+    padding: 5px;
+    width: 50px;
+    margin-top: 40px;
+}
+.card--app .arrow{
+    line-height: 40px;
+}
+
+@media screen and (max-width: 911px) {
+    .planning .row{
+        flex-wrap: wrap;
+    }
+
+    .col-50{
+        flex-basis: 100%;
+    }
+
+    .planning{
+        padding: 0 40px;
+    }
+
+    .planning img{
+       max-width: 100%;
+    }
+
+    .strategic h1{
+        font-size: 50px;
+    }
+
+    .strategic p{
+        margin-bottom: -100px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .planning .row{
+        flex-wrap: wrap;
+    }
+
+    .col-50{
+        flex-basis: 100%;
+    }
+
+    .planning{
+        padding: 0 40px;
+    }
+
+    .planning img{
+       max-width: 100%;
+    }
+
+    .strategic h1{
+        font-size: 30px;
+        margin-top: -60px;
+    }
+
+    .strategic p{
+        margin-bottom: -100px;
     }
 }
