--- a/style.css
+++ b/style.css
@@ -449,7 +449,15 @@ a{
 
 .benefits{
     background-color: var(--lilla);
-    padding-top: 75px;
+    padding-top: 80px;
+    padding-bottom: 64px;
+}
+
+.benefits__title{
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    padding-bottom: 78px;
 }
 
 .benefits .row{
@@ -460,8 +468,8 @@ a{
     flex-basis: calc(100% / 3 - 66px / 3);
     display: flex;
     flex-direction: column;
-    gap: 35px;
-    padding: 55px 40px 32px 35px;
+    gap: 25px;
+    padding: 45px 40px 32px 35px;
     border-radius: 30px;
     background-color: white;
 }
@@ -476,7 +484,8 @@ a{
 }
 
 .col-6 p{
-    line-height: 35px;
+    line-height: 30px;
+    font-size: 15px;
 }
 
 .button--viola{
@@ -487,4 +496,32 @@ a{
     text-align: center;
     color: white;
     border-radius: 20px;
+}
+
+@media screen and (max-width:911px){
+    .benefits{
+        padding: 80px 68px 64px;
+    }
+
+    .benefits .row{
+        flex-wrap: wrap;
+    }
+
+    .col-6{
+        flex-basis: calc(100% / 2 - 33px /2);
+    }
+}
+
+@media screen and (max-width:575px){
+    .benefits{
+        padding: 80px 68px 64px;
+    }
+
+    .benefits .row{
+        flex-wrap: wrap;
+    }
+
+    .col-6{
+        flex-basis: 100%;
+    }
 }
