--- a/style.css
+++ b/style.css
@@ -525,3 +525,151 @@ a{
         flex-basis: 100%;
     }
 }
+
+/*ABOUT*/
+
+.about .row{
+    margin-top: 100px;
+    margin-bottom: 150px;
+    gap: 100px;
+}
+
+.col-70{
+    flex-basis: calc(100%*(3/4) - 100px);
+}
+
+.col-30{
+    flex-basis: calc(100%*(1/4) - 100px);
+}
+
+.col-70 h1{
+    margin-bottom: 65px;
+    font-size: 60px;
+    color: var(--lilla);
+}
+
+.col-70 p:last-child{
+    margin-top: 70px;
+}
+
+.col-70 p{
+    line-height: 40px;
+}
+
+.col-30 img{
+    width: 240px;
+    height: 240px;
+    border-radius: 999px;
+    object-fit: cover;
+    margin-bottom: 30px;
+}
+
+.col-30 p{
+    color: var(--lilla);
+    font-size: 25px;
+    line-height: 40px;
+    font-weight: bold;
+    padding-bottom: 30px;
+}
+
+.button--viola2{
+    color: white;
+    padding: 5px 15px;
+    border-radius: 30px;
+    background-color: var(--lilla);
+}
+
+@media screen and (max-width:911px){
+    .about .row{
+        gap: 10%;
+    }
+
+    .col-70{
+        flex-basis: 70%;
+    }
+
+    .col-30{
+        flex-basis: 20%;
+    }           
+}
+
+@media screen and (max-width:575px){
+
+    .about{
+        padding: 0 68px;
+    }
+
+    .col-70{
+        flex-basis: 100%;
+    }
+
+    .col-30{
+        flex-basis: 100%;
+        margin-top: 60px;
+    }           
+}
+
+/*STARTED*/
+
+.started{
+    text-align: center;
+    color: white;
+    background-color: var(--lilla);
+    padding: 65px 0;
+}
+
+.button--foot{
+    background-color: white;
+    color: var(--lilla);
+    padding: 30px 0;
+    border-radius: 999px;
+    display: inline-block;
+    width: 290px;
+    font-weight: bold;
+}
+
+.container--small2{
+    max-width: 560px;
+    margin: 0 auto;
+}
+
+.container--footer{
+    max-width: 464px;
+    margin: 0 auto;
+}
+
+footer{
+    padding: 45px 0;
+    background-color: var(--dark);
+    text-align: center;
+    color: white;
+}
+
+footer p:first-child{
+    margin-bottom: 65px;
+}
+
+footer a{
+    color: var(--lilla);
+    text-decoration: underline;
+}
+
+@media screen and (max-width:911px){
+    .started{
+        padding: 30px 68px;
+    }
+
+    footer{
+        padding: 30px 68px;
+    }
+}
+
+@media screen and (max-width:575px){
+    .started{
+        padding: 30px 68px;
+    }
+
+    footer{
+        padding: 30px 68px;
+    }
+}
